set up game board and animated random mole

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/css/foundation.css" />
 
     <!-- Custom Google Fonts -->
-
+    <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:300,400,900,900italic,400italic' rel='stylesheet' type='text/css'>
 
     <!-- FontAwesome icons-->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
@@ -24,12 +24,67 @@
     <script src="/js/vendor/modernizr.js"></script>
 </head>
 <body>
+    <div class="row container">
+        <div class="small-11 small-centered columns">
+            <div class="small-5 columns">
+                <h1>Whack-a-Mole<span class="emph">!</span></h1>
+                <h4 class="emph normal">Click the moles to gain points.</h4>
+                <h4 class="letter-space-one">Score: </h4>
+            </div>
 
-    <img id="mole" src="/img/mole-400.png" alt="mole">
-    <img id="mole" src="/img/mole-400.png" alt="mole">
-    <img id="mole" src="/img/mole-400.png" alt="mole">
-    <img id="mole" src="/img/mole-400.png" alt="mole">
-    <img id="mole" src="/img/mole-400.png" alt="mole">
+            <div class="small-7 columns">
+                <ul class="small-block-grid-3 grid-border">
+                    <li class="tile">
+                        <img class="mole invisible pad-top" src="/img/mole-400.png" alt="mole">
+                        <img class="trans" src="/img/trans.png" alt="trans">
+                    </li>
+                    <li class="tile">
+                        <img class="mole invisible pad-top" src="/img/mole-400.png" alt="mole">
+                        <img class="trans" src="/img/trans.png" alt="trans">
+                    </li>
+                    <li class="tile">
+                        <img class="mole invisible pad-top" src="/img/mole-400.png" alt="mole">
+                        <img class="trans" src="/img/trans.png" alt="trans">
+                    </li>
+                    <li class="tile">
+                        <img class="mole invisible negative-top" src="/img/mole-400.png" alt="mole">
+                        <img class="trans" src="/img/trans.png" alt="trans">
+                    </li>
+                    <li class="tile">
+                        <img class="mole invisible negative-top" src="/img/mole-400.png" alt="mole">
+                        <img class="trans" src="/img/trans.png" alt="trans">
+                    </li>
+                    <li class="tile">
+                        <img class="mole invisible negative-top" src="/img/mole-400.png" alt="mole">
+                        <img class="trans" src="/img/trans.png" alt="trans">
+                    </li>
+                    <li class="tile">
+                        <img class="mole invisible negative-top-more" src="/img/mole-400.png" alt="mole">
+                        <img class="trans" src="/img/trans.png" alt="trans">
+                    </li>
+                    <li class="tile">
+                        <img class="mole invisible negative-top-more" src="/img/mole-400.png" alt="mole">
+                        <img class="trans" src="/img/trans.png" alt="trans">
+                    </li>
+                    <li class="tile">
+                        <img class="mole invisible negative-top-more" src="/img/mole-400.png" alt="mole">
+                        <img class="trans" src="/img/trans.png" alt="trans">
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+<!--     <img class="mole" src="/img/mole-400.png" alt="mole">
+    <img class="mole" src="/img/mole-400.png" alt="mole">
+    <img class="mole" src="/img/mole-400.png" alt="mole">
+    <img class="mole" src="/img/mole-400.png" alt="mole">
+    <img class="mole" src="/img/mole-400.png" alt="mole"> -->
 
 
 
