--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
             <div class="small-12 columns">
                 <h1>Whack-a-Mole<span class="emph">!</span></h1>
                 <h4 class="emph normal">Click the moles to gain points.</h4>
-                <h3 class="letter-space-one score">Score: </h3>
+                <h3 class="letter-space-one score">Score: <span id="points">01234</span></h3>
             </div>
         </div>
 
@@ -90,6 +90,24 @@
             </div>
         </div>
 
+
+<footer class="row bottom-row">
+    <div class="small-12 columns">
+
+        <hr/>
+
+        <div class="row">
+            <div class="small-10 columns">
+                <p class="footer-text">© Copyright 2015 Justin Dietert.</p>
+            </div>
+
+            <div class="small-2 columns">
+                <a href="#" class="jd-logo float-right"></a>
+            </div>
+        </div>
+        
+    </div>
+</footer>
 
 
 
