--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,13 @@
 </head>
 <body>
         <div class="row container">
-            <div class="small-12 columns">
+            <div class="small-10 columns">
                 <h1>Whack-a-Mole<span class="emph">!</span></h1>
                 <h4 class="emph normal">Click the moles to gain points.</h4>
                 <h3 class="letter-space-one score">Score: <span id="points">01234</span></h3>
+            </div>
+            <div class="small-2 columns relative">
+                <div id="start" class="button tiny right">Start</div>
             </div>
         </div>
 
