added button animations and blood splat on click

--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,8 @@
                 <!-- <h4 class="right">Timer:&nbsp;<span id="timer" >__</span></h4> -->
             <!-- </div> -->
 
-                <h4 class="emph normal">Click the moles to gain points.</h4>
-                <h3 class="letter-space-one score">Score: <span id="points"></span><span id="timer"><span id="seconds" >__</span>&nbsp;seconds left</span></h3>
+                <h4 id="prompt" class="emph normal">Click start to begin.</h4>
+                <h3 class="letter-space-one score">Score: <span id="points"></span><span id="timer"><span id="seconds" >__</span>&nbsp;second<span id="hide-one">s</span> left</span></h3>
             </div>
             
         </div>
